--- a/src/AuthComponents/auth.css
+++ b/src/AuthComponents/auth.css
@@ -54,6 +54,8 @@
     width: 14vw;
     border: none;
     background-color: white;
+    font-size: x-large;
+    color: grey;
     
 }
 .login-email,.login-password,.login-login,.label,.signup-signup{
@@ -64,7 +66,8 @@
 .login-login,.signup-signup{
     background-color: #A03037;
     color: white;
-    border-radius: 2px;
+    border-radius: 3px;
+    border: none;
 }
 .login-login{
     margin-top: 7vh;
@@ -80,8 +83,16 @@
     height: 5vh;
 }
 .login-lower-fb{
-    background-color: blue;
+    background-color:#4266B2;
     color: white;
+    border: none;
+    border-radius: 3px;
+}
+.login-lower-google{
+    border: none;
+    background-color:#E4E4E4;
+    border-radius: 3px;
+
 }
 .authpage-pic-container{
         top: 185px;
@@ -110,4 +121,12 @@
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 1;
+}
+.authpage-control-active {      
+    color:black;
+
+  }
+.input-message{
+    font-size: small;
+    color: #A03037;
 }
