--- a/src/components/bookdetails.css
+++ b/src/components/bookdetails.css
@@ -17,10 +17,13 @@
 
 }
 .bookdetail-imgbox{
-    width: 25vw;
+    width: 24.5vw;
     margin-left: 5vw;
     height: 60vh;
     border: 1px solid;
+    background-image: url('../resources/Image\ 36@2x.png');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 .bookdetail-container1-buttons{
     display: flex;
@@ -40,10 +43,17 @@
 .bookdetails-wishlist{
     color: white;
     background-color: #0A0102;
+    border: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 0.8vw;
 }
 .bookdetails-addtobag{
     background-color: #A03037;
     color: white;
+    border: none;
 }
 .bookdetails-title{
     text-align: left;
@@ -77,35 +87,61 @@
 .bookdetails-description{
     height: 20vh;
 }
+.counter-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  
+  .counter-container button {
+    margin: 0 10px;
+  }
 .feedback-box{
     margin-top: 2vh;
     padding: 2vh;
-    width: 557px;
-    height: 192px;
+    width: 40vw;
+    height: fit-content;
     background: #F5F5F5 0% 0% no-repeat padding-box;
     border-radius: 2px;
     opacity: 0.63;
 }
 .feedback-description{
     margin-top: 1vh;
-    margin-bottom: 3vh;
     width: 527px;
-    height: 63px;
+    height: 15vh;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border-radius: 3px;
     opacity: 1;
+    border: none;
+
 }
 .feedback-submit{
     background: #3371B5 0% 0% no-repeat padding-box;
     border-radius: 2px;
     width: 6vw;
     height: 4vh;
-    opacity: 1;
-    text-align: left;
-    font: normal normal normal 14px/19px Roboto;
+    text-align: center;
     letter-spacing: 0px;
     color: #FFFFFF;
     text-transform: capitalize;
     opacity: 1;
+    margin-top: 3vh;
     margin-left: 31vw;
+    border: none;
+}
+.bookdetails-randomline{
+    width: 40vw;
+    height: 2px;
+    background-color: grey;
+}
+.bookdetails-desc-title{
+    color: #878787;
+}
+.bookdetails-rating{
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    display: flex;
+    flex-direction: row;
+    gap: 0.5vw;
 }
