--- a/src/components/books.css
+++ b/src/components/books.css
@@ -92,3 +92,16 @@
     color: #0A0102;
     opacity: 1;
 }
+.bookcard-image{
+    background-color:#F5F5F5;
+    padding: 2vh;
+}
+.bookcard-imagebox{
+    background-color: #f5f5f5;
+    width: 9.5vw;
+    height: 23vh;
+    margin-left: 2vw;
+    background-image: url('../resources/Image\ 36@2x.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
