--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    z-index: 10000;
 }
 .navbar-logo-img{
     margin-left: 3vw;
@@ -56,4 +57,10 @@
     letter-spacing: 0.45px;
     color: #FFFFFF;
     opacity: 1;
+}
+.navbar-menu{
+    color: yellowgreen;
+}
+.menuitem-profile{
+    width: 20vw;
 }
