[SHIV]ADD:added a few more changes to the project

--- a/src/AuthComponents/auth.css
+++ b/src/AuthComponents/auth.css
@@ -130,3 +130,11 @@
     font-size: small;
     color: #A03037;
 }
+.AuthPage-main{
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    height: fit-content;
+    padding: 5vh;
+}
+    
