--- a/src/extra/counter.css
+++ b/src/extra/counter.css
@@ -15,4 +15,7 @@
 .counter-container{
     width: fit-content;
     height: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
 }
