--- a/src/components/bookdetails.css
+++ b/src/components/bookdetails.css
@@ -1,5 +1,5 @@
 .bookdetail-main{
-    margin-top: 10vh;
+    margin-top: 5vh;
     height: 100vh;
     display: flex;
     flex-direction: row;
@@ -22,7 +22,7 @@
     height: 60vh;
     border: 1px solid;
     background-image: url('../resources/Image\ 36@2x.png');
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 .bookdetail-container1-buttons{
@@ -144,4 +144,13 @@
     display: flex;
     flex-direction: row;
     gap: 0.5vw;
+}
+.bookdetail-super{
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+.bookdetail-title{
+    margin-top: 10vh;
+    margin-left: 20vw;
 }
